{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 565,
  "lineage": "0ec10125-b273-eb4c-4f29-fadcc943e70e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cd6431fa94dc986",
            "association_id": "eipassoc-0103e7f145edb02b4",
            "domain": "vpc",
            "id": "eipalloc-05cd6431fa94dc986",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0473256c70a9c8723",
            "private_dns": "ip-10-0-20-192.ap-southeast-1.compute.internal",
            "private_ip": "10.0.20.192",
            "public_dns": "ec2-54-151-130-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.130.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab-3-bastionhost_i",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:instance/i-05c293a764c8959f7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c293a764c8959f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lab-st-phunguyen-ap-southeast-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08eb128d28031b899",
            "private_dns": "ip-10-0-39-136.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.39.136",
            "public_ip": "18.141.160.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0385a953b3530cb7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e926a0bc0b26cb74",
            "tags": {
              "Name": "lab-3-bastionhost_i"
            },
            "tags_all": {
              "Name": "lab-3-bastionhost_i"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce4c7ab2575b5482"
            ]
          },
          "dependencies": [
            "aws_security_group.lab-3-bastionhost_i_sg",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab-3-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:internet-gateway/igw-00917671ce2246a83",
            "id": "igw-00917671ce2246a83",
            "owner_id": "007804227482",
            "tags": {
              "Name": "lab-3-ig"
            },
            "tags_all": {
              "Name": "lab-3-ig"
            },
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab-3-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:loadbalancer/app/lab-3-alb/1e05b6da1b4dca2c",
            "arn_suffix": "app/lab-3-alb/1e05b6da1b4dca2c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-3-alb-1687602214.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:loadbalancer/app/lab-3-alb/1e05b6da1b4dca2c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-3-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00f3b41267656fe3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07b57bfcebfa89fad"
              },
              {
                "subnet_id": "subnet-0e926a0bc0b26cb74"
              }
            ],
            "subnets": [
              "subnet-07b57bfcebfa89fad",
              "subnet-0e926a0bc0b26cb74"
            ],
            "tags": {
              "Name": "lab-3-alb"
            },
            "tags_all": {
              "Name": "lab-3-alb"
            },
            "vpc_id": "vpc-08970b70b61ed3b07",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_subnet.lab-3-public-subnet-2",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab-3-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:listener/app/lab-3-alb/1e05b6da1b4dca2c/cda2930c730b4819",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:targetgroup/lab-3-tg/32b5acd19c3e9b1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:listener/app/lab-3-alb/1e05b6da1b4dca2c/cda2930c730b4819",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:loadbalancer/app/lab-3-alb/1e05b6da1b4dca2c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab-3-alb",
            "aws_lb_target_group.lab-3-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_subnet.lab-3-public-subnet-2",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab-3-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:targetgroup/lab-3-tg/32b5acd19c3e9b1a",
            "arn_suffix": "targetgroup/lab-3-tg/32b5acd19c3e9b1a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:007804227482:targetgroup/lab-3-tg/32b5acd19c3e9b1a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab-3-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab-3-tg"
            },
            "tags_all": {
              "Name": "lab-3-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cd6431fa94dc986",
            "connectivity_type": "public",
            "id": "nat-00699d630618ea1fc",
            "network_interface_id": "eni-0473256c70a9c8723",
            "private_ip": "10.0.20.192",
            "public_ip": "54.151.130.181",
            "subnet_id": "subnet-0e926a0bc0b26cb74",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab-3-ig",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-3-rt-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:route-table/rtb-0035b3b5f9c60af9e",
            "id": "rtb-0035b3b5f9c60af9e",
            "owner_id": "007804227482",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00699d630618ea1fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-3-rt-private-1"
            },
            "tags_all": {
              "Name": "lab-3-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-3-rt-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:route-table/rtb-0e98bda6ca7ab48f9",
            "id": "rtb-0e98bda6ca7ab48f9",
            "owner_id": "007804227482",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00699d630618ea1fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-3-rt-private-2"
            },
            "tags_all": {
              "Name": "lab-3-rt-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-3-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:route-table/rtb-0435c31cbe1638077",
            "id": "rtb-0435c31cbe1638077",
            "owner_id": "007804227482",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00917671ce2246a83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-3-rt-public"
            },
            "tags_all": {
              "Name": "lab-3-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab-3-ig",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-3-route-table-private-connection-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0708bd644b252948e",
            "route_table_id": "rtb-0035b3b5f9c60af9e",
            "subnet_id": "subnet-07ac40f2b46416fd5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab-3-ig",
            "aws_nat_gateway.ngw",
            "aws_route_table.lab-3-rt-private-1",
            "aws_subnet.lab-3-private-subnet-1",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-3-route-table-private-connection-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c809fe98185dee87",
            "route_table_id": "rtb-0e98bda6ca7ab48f9",
            "subnet_id": "subnet-022fd2eb42a100d3f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab-3-ig",
            "aws_nat_gateway.ngw",
            "aws_route_table.lab-3-rt-private-2",
            "aws_subnet.lab-3-private-subnet-2",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-3-rt-public-connection-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07abf9fe7214ed33e",
            "route_table_id": "rtb-0435c31cbe1638077",
            "subnet_id": "subnet-0e926a0bc0b26cb74"
          },
          "dependencies": [
            "aws_internet_gateway.lab-3-ig",
            "aws_route_table.lab-3-rt-public",
            "aws_subnet.lab-3-public-subnet-1",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-3-rt-public-connection-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08666adf8684257e3",
            "route_table_id": "rtb-0435c31cbe1638077",
            "subnet_id": "subnet-07b57bfcebfa89fad"
          },
          "dependencies": [
            "aws_internet_gateway.lab-3-ig",
            "aws_route_table.lab-3-rt-public",
            "aws_subnet.lab-3-public-subnet-2",
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:security-group/sg-00f3b41267656fe3e",
            "description": "Allow incomming HTTP Connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f3b41267656fe3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "007804227482",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-3-SG-i",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:security-group/sg-09309d3faa6e86933",
            "description": "Security group for 2 instance in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output for instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09309d3faa6e86933",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connect with bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-3-sg-i",
            "name_prefix": "",
            "owner_id": "007804227482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-3-sg-i"
            },
            "tags_all": {
              "Name": "lab-3-sg-i"
            },
            "timeouts": null,
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-3-bastionhost_i_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:security-group/sg-0ce4c7ab2575b5482",
            "description": "Security group for setup a bastionhost instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from Bastion Host",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce4c7ab2575b5482",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion Host SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastionhost_instance_security_group",
            "name_prefix": "",
            "owner_id": "007804227482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-3-bastionhost_i_sg"
            },
            "tags_all": {
              "Name": "lab-3-bastionhost_i_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-3-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:subnet/subnet-07ac40f2b46416fd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ac40f2b46416fd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007804227482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-3-private-subnet-1"
            },
            "tags_all": {
              "Name": "lab-3-private-subnet-1"
            },
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-3-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:subnet/subnet-022fd2eb42a100d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022fd2eb42a100d3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007804227482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-3-private-subnet-2"
            },
            "tags_all": {
              "Name": "lab-3-private-subnet-2"
            },
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-3-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:subnet/subnet-0e926a0bc0b26cb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e926a0bc0b26cb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007804227482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-3-public-subnet-1"
            },
            "tags_all": {
              "Name": "lab-3-public-subnet-1"
            },
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-3-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:subnet/subnet-07b57bfcebfa89fad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b57bfcebfa89fad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007804227482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-3-public-subnet-2"
            },
            "tags_all": {
              "Name": "lab-3-public-subnet-2"
            },
            "vpc_id": "vpc-08970b70b61ed3b07"
          },
          "dependencies": [
            "aws_vpc.lab-3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-3-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:007804227482:vpc/vpc-08970b70b61ed3b07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064716e93dc350b2e",
            "default_route_table_id": "rtb-00bfa4146400af18c",
            "default_security_group_id": "sg-0db270f3c76ad0e52",
            "dhcp_options_id": "dopt-086f3282d661f84f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08970b70b61ed3b07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bfa4146400af18c",
            "owner_id": "007804227482",
            "tags": {
              "Name": "lab-3-vpc"
            },
            "tags_all": {
              "Name": "lab-3-vpc"
            }
          }
        }
      ]
    }
  ]
}